examples/test/testpolicy13043.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13043
  namespace: namespace204
spec:
  podSelector:
    matchLabels:
      key15: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value0
          key30: value29
          key8: value17
      podSelector:
        matchLabels:
          key37: value34
          key29: value37
